# StellarEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json
assets/shaders/: mesh.hlsl  shadow.hlsl  skinning.hlsl  triangle.hlsl
src/: main.cpp
src/animation/: animation.ixx
src/assets/: gltf_loader.ixx
src/core/: app.hpp  app.ixx  core.ixx  result.ixx
src/ecs/: ecs.hpp
src/input/: keyboard.ixx
src/render/: primitives.ixx
src/render/vulkan/: adapter.cpp  command.cpp  core.cpp  core.ixx  device.cpp  instance.cpp  plugin.ixx  shader_compiler.ixx  types.ixx
src/scene/: transform.ixx
src/window/: window.ixx
